# mail-server

./: .env  Cargo.toml  Dockerfile  Dockerfile.migration  docker-compose.yml
.github/workflows/: mail-server-github-actions.yml  rust.yml
config/: base.yaml  configuration.yaml  live.yaml  local.yaml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20241027_140317_add_status.rs
migrations/: 01_db.sql
scripts/: orm_generate.sh
scripts/sql/add_subscription_tokens_tab/: add_subscription_tokens_tab_down.sql  add_subscription_tokens_tab_up.sql
scripts/sql/add_subscriptions_tab/: add_subscriptions_tab_up.sql
src/: configuration.rs  lib.rs  main.rs  routes.rs  startup.rs
src/biz/: email_client.rs
src/boot/: migration.rs  mod.rs  server.rs
src/common/: common_response.rs
src/config/: system_config.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/exception/: biz_exception.rs  mod.rs
src/model/: common_response.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  subscription_tokens.rs  subscriptions.rs
src/orm_model/: prelude.rs
src/routes/: confirm.rs  subscriptions.rs
src/telemetry/: log_init.rs  mod.rs
tests/: confirm_subscription.rs  health_check_test.rs  subscriptions.rs
tests/helpers/: helpers.rs
