[package]
name = "mail-server"
version = "0.1.0"
edition = "2021"
authors = ["jason gao"]

[lib]
path = "src/lib.rs"

[workspace]
members = [".", "migration"]

[[bin]]
path = "src/main.rs"
name = "mail-server"

[dependencies]
#子crate 用于数据迁移
migration = { path = "migration" } # depends on your needs




actix-web = "4.9.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.210", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
fake = "~2.3"
validator = "0.18.1"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
#错误处理
anyhow = "1.0.90"
thiserror = "1.0.64"

#更好的断言
claim = "0.5.0"

rand = "0.8.5"

#DB
sea-orm = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "debug-print"] }
sea-orm-migration = { version = "1.1.0", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

#trace和日志相关
tracing-log = "0.2.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-actix-web = "0.7.14"

reqwest = { version = "0.12.8", features = ["json"] }
secrecy = { version = "0.10.3", features = ["serde"] }




[dev-dependencies]
once_cell = "1.20.2"
wiremock = "0.6.2"
serde_json = "1"